<resources>
    <string name="app_name">test1</string>
    <string name="title">twooter</string>
    <string name="username_email">Email Address…</string>
    <string name="password">Password…</string>
    <string name="login">Login</string>
    <string name="don_t_have_an_account">Don\'t have an account?</string>
    <string name="sign_up"> Sign up</string>
    <string name="registration">Registration</string>
    <string name="username">Username</string>
    <string name="register">Register</string>
    <string name="back_to_homepage">Back to homepage</string>
    <string name="welcome">Welcome</string>
    <string name="logout">Logout</string>
    <string name="home">Home</string>
    <string name="confirm_password">Confirm Password…</string>
    <string name="welcome_back">Welcome back</string>
    <string name="log_in_to_proceed">Log in to proceed</string>
    <string name="tw">tw</string>
    <string name="ooter">ooter</string>
    <string name="back">Back</string>
    <string name="welcome_home">Welcome Home</string>
    <string name="todays_twoot">Today\'s Twoot~</string>
    <string name="user">User</string>
    <string name="joined">Joined</string>
    <string name="_5_10_2026">5/10/2026</string>
    <string name="profpic">profPic</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="user_gmail_com">user@gmail.com</string>
    <string name="ellipsis">. . .</string>
    <string name="post_content_here">Post content here</string>
    <string name="_0">0</string>
    <string name="post">Post</string>
    <string name="postHolder">What\'s on your mind?</string>
    <string name="imagepicker">imagepicker</string>
    <string name="camerafunc">camerafunc</string>
    <string name="closebtn">closeBtn</string>
    <string name="edit_post">Edit Post</string>
    <string name="edit_your_post">Edit your post…</string>
    <string name="Done">Done</string>
    <string name="create_your_account">Create your account</string>
    <string name="join_and_get_inspired">Join and get Inspired</string>
    <string name="comments">Comments</string>
    <string name="enter_your_comment">Enter your comment…</string>
    <string name="edit_comment">Edit comment…</string>
</resources>