<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    android:scrollbars="vertical">

<androidx.constraintlayout.widget.ConstraintLayout
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/bg_gray"
    android:fitsSystemWindows="true"
    android:paddingBottom="120dp"
    tools:context=".MainActivity">



<!--    <ImageView-->
<!--        android:id="@+id/logo"-->
<!--        android:layout_width="80dp"-->
<!--        android:layout_height="80dp"-->
<!--        android:src="@drawable/iconbirb"-->
<!--        app:layout_constraintTop_toTopOf="parent"-->
<!--        app:layout_constraintStart_toStartOf="parent"-->
<!--        app:layout_constraintEnd_toStartOf="@id/title"-->
<!--        android:layout_marginTop="95dp"-->
<!--        android:layout_marginEnd="0dp" />-->

<!--    <TextView-->
<!--        android:id="@+id/title"-->
<!--        android:layout_width="wrap_content"-->
<!--        android:layout_height="wrap_content"-->
<!--        android:layout_marginTop="80dp"-->
<!--        android:fontFamily="@font/kaushan_script"-->
<!--        android:text="@string/title"-->
<!--        android:textSize="70sp"-->
<!--        android:textColor="@android:color/white"-->
<!--        app:layout_constraintEnd_toEndOf="parent"-->
<!--        app:layout_constraintStart_toEndOf="@id/logo"-->
<!--        app:layout_constraintTop_toTopOf="parent" />-->
    <LinearLayout
        android:id="@+id/headerLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center_vertical"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="90dp">

        <ImageView
            android:id="@+id/logo"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:src="@drawable/iconbirb"
            android:layout_marginEnd="0dp"/>

        <TextView
            android:id="@+id/subTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/kaushan_script"
            android:text="@string/tw"
            android:textSize="70sp"
            android:textColor="@android:color/white"/>
        <TextView
            android:id="@+id/title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/kaushan_script"
            android:text="@string/ooter"
            android:textSize="70sp"
            android:textColor="@android:color/white"
            android:layout_marginStart="-7dp"
            />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/secondHeadLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center_vertical"
        app:layout_constraintTop_toBottomOf="@id/headerLayout"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="60dp"
        >

        <TextView
            android:id="@+id/topLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/welcome_back"
            android:textColor="@color/white"
            android:textSize="20sp"
            />

        <TextView
            android:id="@+id/bottomLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/log_in_to_proceed"
            android:textSize="18sp"
            android:textColor="@color/gray"
            android:layout_marginTop="2dp"
            />

    </LinearLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/usernameLayout"
        android:layout_width="320dp"
        android:layout_height="wrap_content"
        android:hint="@string/username_email"
        app:boxBackgroundMode="filled"
        app:layout_constraintTop_toBottomOf="@id/secondHeadLayout"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="60dp">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress"
            android:textColor="@color/material_dynamic_neutral50"
            android:textSize="20sp"
            android:drawableStart="@drawable/baseline_email_24"
            android:drawablePadding="20dp" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/passwordLayout"
        android:layout_width="320dp"
        android:layout_height="wrap_content"
        android:hint="@string/password"
        app:boxBackgroundMode="filled"
        app:layout_constraintTop_toBottomOf="@id/usernameLayout"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="16dp">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:textColor="@color/material_dynamic_neutral50"
            android:textSize="20sp"
            android:drawableStart="@drawable/outline_asterisk_24"
            android:drawablePadding="20dp"/>
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/loginBtn"
        android:layout_width="244dp"
        android:layout_height="60dp"
        android:text="@string/login"
        android:textColor="@android:color/white"
        android:textSize="20sp"
        app:backgroundTint="@android:color/holo_blue_dark"
        app:layout_constraintTop_toBottomOf="@id/passwordLayout"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="40dp" />

    <LinearLayout
        android:id="@+id/signUpLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center_vertical"
        app:layout_constraintTop_toBottomOf="@id/loginBtn"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="48dp"
        >

    <TextView
        android:id="@+id/noAcc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/don_t_have_an_account"
        android:textColor="@color/white"
        android:textSize="20sp"
      />

    <TextView
        android:id="@+id/registerBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sign_up"
        android:textSize="20sp"
        android:textColor="@color/blue"
        android:layout_marginStart="5dp"
        />

    </LinearLayout>


    <ProgressBar
        android:id="@+id/progressBar"
        android:visibility="gone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="300dp"/>

    <View
        android:id="@+id/forScrolling"
        android:layout_width="match_parent"
        android:layout_height="400dp"
        app:layout_constraintTop_toBottomOf="@id/signUpLayout"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        />

</androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>