<?xml version="1.0" encoding="utf-8"?>

<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:background="@color/bg_gray"
    android:layout_marginBottom="10dp"
    >

    <View
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:background="@color/darkerGray"/>


<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="12dp">

    <EditText
        android:id="@+id/etPostText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/postHolder"
        android:textColorHint="@color/darkerGray"
        android:textColor="@color/white"
        android:minHeight="120dp"
        android:gravity="top"
        android:padding="10dp"
        android:background="@drawable/postinput_border"
        android:inputType="textMultiLine"

        />

    <ImageView
        android:id="@+id/imgSelected"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:layout_marginTop="10dp"
        android:scaleType="centerCrop"
        android:visibility="gone"
        />

    <ImageButton
        android:id="@+id/btnRemoveImage"
        android:layout_width="35dp"
        android:layout_height="35dp"
        android:layout_marginTop="5dp"
        android:background="@android:color/transparent"
        android:src="@drawable/outline_close_24"
        android:visibility="gone"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:orientation="horizontal"
        android:gravity="center_vertical"
        >

        <ImageButton
            android:id="@+id/btnImage"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:background="@android:color/transparent"
            android:contentDescription="@string/imagepicker"
            android:src="@drawable/outline_imagesmode_24"
            android:scaleType="fitCenter"
            />

        <ImageButton
            android:id="@+id/btnCamera"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_marginStart="10dp"
            android:background="@android:color/transparent"
            android:contentDescription="@string/camerafunc"
            android:src="@drawable/outline_linked_camera_24"
            android:scaleType="fitCenter"
            />

        <View
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_weight="1"
            />

        <Button
            android:id="@+id/btnPost"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginStart="8dp"
            android:text="@string/post"
            android:backgroundTint="@color/blue"
            android:background="@drawable/button_rounded"
            />


    </LinearLayout>

</LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:background="@color/darkerGray"/>

</LinearLayout>