<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="16dp"
    android:background="@drawable/editpost_bg"

    >

    <View
        android:layout_width="40dp"
        android:layout_height="4dp"
        android:layout_gravity="center"
        android:background="#CCCCCC"
        android:layout_marginBottom="12dp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:layout_marginBottom="15dp">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/edit_post"
            android:textStyle="bold"
            android:textColor="@color/opacwhite"
            android:textSize="18sp" />

        <ImageButton
            android:id="@+id/btnClose"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:background="@android:color/transparent"
            android:src="@drawable/outline_close_24" />
    </LinearLayout>

    <EditText
        android:id="@+id/etEditPost"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColorHint="@color/darkerGray"
        android:textColor="@color/white"
        android:minHeight="120dp"
        android:gravity="top"
        android:padding="10dp"
        android:background="@drawable/postinput_border"
        android:inputType="textMultiLine"
        android:hint="@string/edit_your_post"
        android:layout_marginTop="12dp"

        />

    <ImageView
        android:id="@+id/imgPreview"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:layout_marginTop="12dp"
        android:scaleType="centerCrop"
        android:visibility="gone" />

    <ImageButton
        android:id="@+id/btnRemoveEditImage"
        android:layout_width="35dp"
        android:layout_height="35dp"
        android:layout_marginTop="5dp"
        android:background="@android:color/transparent"
        android:src="@drawable/outline_close_24"
        app:tint="@color/darkerGray"
        android:visibility="visible"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp">

        <ImageButton
            android:id="@+id/btnGallery"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:background="@android:color/transparent"
            android:src="@drawable/outline_imagesmode_24"
            android:scaleType="fitCenter"
            android:padding="8dp"
            />

        <ImageButton
            android:id="@+id/btnCamera"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:background="@android:color/transparent"
            android:src="@drawable/outline_linked_camera_24"
            android:scaleType="fitCenter"
            android:padding="8dp"
            />
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_gravity="center_vertical"
        >

        <View
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_weight="1"
            />

        <Button
            android:id="@+id/btnUpdate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/Done"
            android:textColor="@color/white"
            android:background="@drawable/button_rounded"
            />

    </LinearLayout>

</LinearLayout>